[gd_scene load_steps=9 format=3 uid="uid://6s62hkkab772"]

[ext_resource type="PackedScene" uid="uid://blorwsk7msxwu" path="res://Scenes/entity.tscn" id="1_3nr38"]
[ext_resource type="PackedScene" uid="uid://cirs61t03la8g" path="res://Scenes/player_graphics.tscn" id="2_ao26x"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="2_f0v6a"]
[ext_resource type="Resource" uid="uid://b3g3hfv6rvlbq" path="res://inventory/playerinv.tres" id="3_uqs1c"]
[ext_resource type="FontFile" uid="uid://cpojoq47dln4s" path="res://Fonts/PixelOperator.ttf" id="5_je0pj"]
[ext_resource type="Shader" path="res://Shaders/flash_text.gdshader" id="5_t73gr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_don8d"]
size = Vector2(19, 42)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c2q4f"]
shader = ExtResource("5_t73gr")
shader_parameter/alpha = 1.0

[node name="Player" groups=["Player"] instance=ExtResource("1_3nr38")]
collision_layer = 2
script = ExtResource("2_f0v6a")
inv = ExtResource("3_uqs1c")
speed = 200
acceleration = 700
friction = 900
jump_strength = 300
gun_jump_strength = 180
gravity = 600
terminal_velocity = 500

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2(0.5, -3)
shape = SubResource("RectangleShape2D_don8d")

[node name="PlayerGraphics" parent="." index="1" instance=ExtResource("2_ao26x")]
position = Vector2(0, -17)

[node name="Camera2D" type="Camera2D" parent="." index="2"]
zoom = Vector2(2, 2)

[node name="Coyote" type="Timer" parent="Timers" index="0"]
wait_time = 0.15
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers" index="1"]
wait_time = 0.25
one_shot = true

[node name="FloorRays" type="Node2D" parent="." index="4"]

[node name="Right" type="RayCast2D" parent="FloorRays" index="0"]
target_position = Vector2(20, 20)

[node name="Left" type="RayCast2D" parent="FloorRays" index="1"]
target_position = Vector2(-20, 20)

[node name="Label" type="Label" parent="." index="5"]
material = SubResource("ShaderMaterial_c2q4f")
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -66.5
offset_top = -26.0
offset_right = 66.5
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_je0pj")
theme_override_font_sizes/font_size = 8
text = "No space in inventory"

[connection signal="knock_back" from="." to="." method="_on_knock_back"]
